Installation of GoogleAnalytics and link the installation to README

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>atarantini/wpbf @ GitHub</title>
+  <title>wpbf - WordPress Brute Force @ GitHub</title>
 
   <style type="text/css">
     body {
@@ -28,6 +28,17 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-254996-17']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
 </head>
 
 <body>
@@ -54,7 +65,7 @@
 wpbf will test quickly if your WordPress installation is hard to brutefoce or the passwords used are weak and need to be changed.</p><h2>Dependencies</h2>
 <p>Python 2.6+</p>
 <h2>Install</h2>
-<p>See README</p>
+<p>See <a href="https://github.com/atarantini/wpbf/">README in GitHub repository</a></p>
 <h2>License</h2>
 <p>GPLv3</p>
 <h2>Authors</h2>
