--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-
   <title>wpbf - WordPress Brute Force @ GitHub</title>
-
   <style type="text/css">
     body {
       margin-top: 1.0em;
@@ -14,17 +12,17 @@
     }
     #container {
       margin: 0 auto;
-      width: 700px;
+      width: 903px;
     }
     h1 { font-size: 3.8em; color: #28150b; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #28150b; }
-    h3 { text-align: center; color: #28150b; }
-    a { color: #28150b; }
+    h2 { font-size: 1.5em; color: #CC333F; }
+    h3 { text-align: center; color: #CC333F; }
+    a { color: #CC333F; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
+    pre { background: #6A4A3C; color: #59392b; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
@@ -40,40 +38,33 @@
       })();
     </script>
 </head>
-
 <body>
   <a href="http://github.com/atarantini/wpbf"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
   <div id="container">
-
     <div class="download">
       <a href="http://github.com/atarantini/wpbf/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
       <a href="http://github.com/atarantini/wpbf/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
-
     <h1><a href="http://github.com/atarantini/wpbf">wpbf - WordPress BruteForce</a>
       <span class="small">by <a href="http://github.com/atarantini">atarantini</a></span></h1>
-
     <div class="description">
       Remotely test password strength of WordPress bloging software
     </div>
-
-    <p>wpbf is a python script that helps you remotely test and audit password strength of WordPress installations. Currently it supports threading, username detection/enumeration, advanced logging and using content keywords into wordlist.
-
-wpbf will test quickly if your WordPress installation is hard to brutefoce or the passwords used are weak and need to be changed.</p><h2>Dependencies</h2>
-<p>Python 2.6+</p>
-<h2>Install</h2>
-<p>See <a href="https://github.com/atarantini/wpbf/">README in GitHub repository</a></p>
-<h2>License</h2>
-<p>GPLv3</p>
-<h2>Authors</h2>
-<p>atarantini (atarantini@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>atarantini@gmail.com<br/>      </p>
-
-
+    <p>wpbf is a python script that helps you to remotely test and audit password strength of WordPress blogs. It currently supports threading, username detection/enumeration, logging and search content for keywords to increase password list.
+<br /><br />
+wpbf will test quickly if your WordPress blog is hard to brutefoce or the passwords used are weak and need to be changed.</p>
+    <h2>Dependencies</h2>
+    <p>Python 2.6+</p>
+    <h2>Install</h2>
+    <p>See <a href="https://github.com/atarantini/wpbf/">README in GitHub repository</a></p>
+    <h2>License</h2>
+    <p>GPLv3</p>
+    <h2>Authors</h2>
+    <p>Andres Tarantini (atarantini@gmail.com)</p>
+    <h2>Contact</h2>
+    <p>atarantini@gmail.com</p>
     <h2>Download</h2>
     <p>
       You can download this project in either
@@ -84,13 +75,9 @@ wpbf will test quickly if your WordPress installation is hard to brutefoce or th
       by running:
       <pre>$ git clone git://github.com/atarantini/wpbf</pre>
     </p>
-
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/atarantini/wpbf">atarantini/wpbf</a>
     </div>
-
   </div>
-
-  
 </body>
 </html>
