More style changes

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #d7eaf4;
+      background-color: #EDC951;
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
+      color: #5F4236;
     }
     #container {
       margin: 0 auto;
@@ -17,12 +17,12 @@
     h1 { font-size: 3.8em; color: #28150b; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #CC333F; }
+    h2 { font-size: 1.5em; color: #00828E; }
     h3 { text-align: center; color: #CC333F; }
     a { color: #CC333F; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
-    pre { background: #6A4A3C; color: #59392b; padding: 15px;}
+    pre { background: #6A4A3C; color: #EB6841; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
