--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
+    <meta name="keywords" content="wpbf, wordpress, word, press, bruteforce, brute force, blog, username, enumeration, pentest" />
   <title>wpbf - WordPress Brute Force @ GitHub</title>
   <style type="text/css">
     body {
