--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li>Username enumeration/detection (TALSOFT-2011-0526 with fallback to author's archive page and content parsing)</li>
             <li>Fetch keywords from blog's content and use them in the wordlist</li>
             <li>WordPress version fingerprint</li>
-            <li>Detection of known plugins (including Login LockDown, that will make the bruteforce usefull)</li>
+            <li>Detection of known plugins (including Login LockDown, that will make the bruteforce useless)</li>
             <li>Advanced logging (with it's own configuration file) using Python's logging library</li>
         </ul>
     </p>
