--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  <a class="logo" href="http://github.com/atarantini/wpbf">wpbf</a>
 	  <div class="share">
 		<ul>
-			<li><g:plusone size="medium" href="http://atarantini.github.com/wpbf/"></g:plusone></li>
+			<li><g:plusone size="small" annotation="inline"></g:plusone></li>
 		    <li><a href="https://twitter.com/share" class="twitter-share-button" data-via="caco_patane">Tweet</a></li>
 		</ul>
 	 </div>
@@ -121,5 +121,12 @@
   </div>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   <script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script>
+  <script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+  </script>
 </body>
 </html>
