--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  <a class="logo" href="http://github.com/atarantini/wpbf">wpbf</a>
 	  <div class="share">
 		<ul>
-			<li><g:plusone size="small" annotation="inline"></g:plusone></li>
+			<li><g:plusone size="small" annotation="inline" width="100"></g:plusone></li>
 		    <li><a href="https://twitter.com/share" class="twitter-share-button" data-via="caco_patane">Tweet</a></li>
 		</ul>
 	 </div>
