Facebook "Like" button for the website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     .box { font-size: 1.2em; color: #222222; padding: 10px 20px; font-style: italic; background: #e5c24e; }
 	.box pre { overflow-x: overlay; }
 	.share { float: right; margin: 20px 20px 0 0; }
-	.share li { list-style: none; float: left; margin: 10px; }
+	.share li { list-style: none; }
   </style>
     <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -41,8 +41,11 @@
 	  <a class="logo" href="http://github.com/atarantini/wpbf">wpbf</a>
 	  <div class="share">
 		<ul>
-			<li><g:plusone size="normal" annotation="inline" width="150"></g:plusone></li>
+			<li>aaa<g:plusone size="normal" annotation="inline" width="70"></g:plusone></li>
 		    <li><a href="https://twitter.com/share" class="twitter-share-button" data-via="caco_patane">Tweet</a></li>
+			<li>
+				<div class="fb-like" data-href="http://atarantini.github.com/wpbf/" data-send="false" data-layout="button_count" data-width="70" data-show-faces="true"></div>
+			</li>
 		</ul>
 	 </div>
   </div>
@@ -128,5 +131,13 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
   </script>
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
 </body>
 </html>
