Smal fixes to share buttons in the website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     .box { font-size: 1.2em; color: #222222; padding: 10px 20px; font-style: italic; background: #e5c24e; }
 	.box pre { overflow-x: overlay; }
 	.share { float: right; margin: 20px 20px 0 0; }
-	.share li { list-style: none; }
+	.share li { list-style: none; float: right; }
   </style>
     <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -41,7 +41,7 @@
 	  <a class="logo" href="http://github.com/atarantini/wpbf">wpbf</a>
 	  <div class="share">
 		<ul>
-			<li>aaa<g:plusone size="normal" annotation="inline" width="70"></g:plusone></li>
+			<li><g:plusone size="small" annotation="inline" width="70"></g:plusone></li>
 		    <li><a href="https://twitter.com/share" class="twitter-share-button" data-via="caco_patane">Tweet</a></li>
 			<li>
 				<div class="fb-like" data-href="http://atarantini.github.com/wpbf/" data-send="false" data-layout="button_count" data-width="70" data-show-faces="true"></div>
